fix: the article title remain black in dark mode (#302)

--- a/src/styles/adaptedStyles/momentsPage.scss
+++ b/src/styles/adaptedStyles/momentsPage.scss
@@ -259,7 +259,8 @@
     .bili-dyn-live-users,
     .bili-dyn-live-users__title,
     .bili-dyn-list-loading,
-    .bili-dyn-card-pgc__title {
+    .bili-dyn-card-pgc__title,
+    .dyn-card-opus__title {
       color: var(--bew-text-1);
     }
 
